RESOLVED FIXED 110529
Threaded HTML Parser fails fast/dom/Document/readystate.html
https://bugs.webkit.org/show_bug.cgi?id=110529
Summary Threaded HTML Parser fails fast/dom/Document/readystate.html
Adam Barth
Reported 2013-02-21 16:28:52 PST
Reduction: <body> <iframe></iframe> <script> testRunner.dumpAsText(); var doc = frames[0].document; doc.open(); doc.close(); console.log(doc.body); </script> This outputs "null" with the threaded parser and non-null without.
Attachments
Patch (3.33 KB, patch)
2013-02-21 16:49 PST, Adam Barth
no flags
Patch for landing (3.37 KB, patch)
2013-02-21 16:54 PST, Adam Barth
no flags
Eric Seidel (no email)
Comment 1 2013-02-21 16:30:59 PST
Just have to make sure you pump at least once for the body to be created. Presumably for this script created parser we are failing to pump during flush, etc. We should have had code for this?
Adam Barth
Comment 2 2013-02-21 16:49:32 PST
Eric Seidel (no email)
Comment 3 2013-02-21 16:51:18 PST
Comment on attachment 189638 [details] Patch You could have had it spit out "PASS" instead. :) But LGTM.
Adam Barth
Comment 4 2013-02-21 16:51:48 PST
Comment on attachment 189638 [details] Patch Alright
Adam Barth
Comment 5 2013-02-21 16:54:21 PST
Created attachment 189640 [details] Patch for landing
WebKit Review Bot
Comment 6 2013-02-21 17:15:12 PST
Comment on attachment 189640 [details] Patch for landing Clearing flags on attachment: 189640 Committed r143670: <http://trac.webkit.org/changeset/143670>
WebKit Review Bot
Comment 7 2013-02-21 17:15:15 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.